--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.3.3",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
